add css rule to make h1 green

--- a/island-resort.html
+++ b/island-resort.html
@@ -9,11 +9,32 @@
   <h2>Your Dream Vacation is Waiting for You</h2>
   <p>Here in Paradise, you will find whatever your heart desires.</p>
   <ul>
-    <li>Accomodations</li>
-    <li>Travel Arrangements</li>
-    <li>Activities</li>
-    <li>Gallery</li>
-    <li>Contact Info</li>
+    <li>
+      <a href="accomodation.html">
+        Accomodations
+      </a>
+    </li>
+    <li>
+      <a href="travel-arrangemnets.html">
+        Travel Arrangements
+      </a>
+    </li>
+    <li>
+      <a href="activities.html">
+        Activities
+      </a>
+    </li>
+    <li>
+      <a href="gallery.html">
+        Gallery
+      </a>
+    </li>
+    <li>
+      <a href="contact-info.html">
+        Contact Info
+      </a>
+    </li>
   </ul>
   <h3>Plan Your Getaway Now</h3>
 </body>
+</html>
